--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Hola mundo</h1>
+    <div class="container">
+      <div class="navbar"></div>
+      <div class="main"></div>
+      <div class="media"></div>
+      <div class="blog"></div>
+      <div class="footer"></div>
+    </div>
   </body>
   </html>
