--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Training</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="http://localhost:35729/livereload.js"></script>
   </head>
   <body>
     <div class="container">
-      <div class="navbar"></div>
+      <div class="navbar">
+        <img src="./assets/img/plex-logo.svg" href="plex logo">
+        <input />
+        <div></div>
+        <div class="nav-menu">
+          <a>Películas y TV gratis</a>
+          <a>TV en directo</a>
+          <a>Qué incluye</a>
+          <a>Descargar</a>
+          <a>|</a>
+          <a>Iniciar Sesión</a>
+        </div>
+        <button></button>
+      </div>
       <div class="main"></div>
       <div class="media"></div>
       <div class="blog"></div>
