Main section grids

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="navbar">
+      <header class="navbar">
         <img src="./assets/img/plex-logo.svg" href="plex logo">
         <input />
         <div></div>
@@ -22,11 +22,17 @@
           <a>Iniciar Sesión</a>
         </div>
         <button></button>
-      </div>
-      <div class="main"></div>
-      <div class="media"></div>
-      <div class="blog"></div>
-      <div class="footer"></div>
+      </header>
+
+      <section class="main">
+        <div class="streaming"></div>
+        <div class="discover"></div>
+        <div class="ratings"></div>
+      </section>
+
+      <section class="media"></section>
+      <section class="blog"></section>
+      <footer class="footer"></footer>
     </div>
   </body>
   </html>
