--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <header class="navbar">
         <img src="./assets/img/plex-logo.svg" href="plex logo">
-        <input />
+        <input type="text" placeholder="Find Movies & TV"/>
         <div></div>
         <div class="nav-menu">
           <a>Películas y TV gratis</a>
@@ -21,15 +21,20 @@
           <a>|</a>
           <a>Iniciar Sesión</a>
         </div>
-        <button></button>
+        <button>Regístrate</button>
       </header>
 
       <section class="main">
-        <div class="streaming"></div>
+        <div class="streaming">
+          <h1>Meet your TV concierge</h1>
+          <h4>Need something to watch? We’re on it. Plex combines free movies & TV with </br>
+             your favorite streaming services, so there’s always more to discover.</h4>
+          <button>Comenzar el streaming</button>
+        </div>
         <div class="discover"></div>
         <div class="ratings"></div>
       </section>
-
+      
       <section class="media"></section>
       <section class="blog"></section>
       <footer class="footer"></footer>
