Discover section: background, grid

--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
              your favorite streaming services, so there’s always more to discover.</h4>
           <button>Comenzar el streaming</button>
         </div>
-        <div class="discover"></div>
+
+        <div class="discover">
+          <div class="menu">
+            <a>Películas y series</a>
+            <a>TV en directo</a>
+            <a>Multimedia</a>
+            <a>Your Music</a>
+          </div>
+          <div class="space"></div>
+          <div class="menu-selector">< ></div>
+          <div class="menu-card"></div>
+        </div>
+
         <div class="ratings"></div>
       </section>
       
