--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
           </div>
           <div class="space"></div>
           <div class="menu-selector">< ></div>
-          <div class="menu-card"></div>
+          <div class="menu-card">
+            <div class="card-info">
+              <h1>Rediscover your music</h1>
+              <h4>blabla</h4>
+              <button>Discover Plexamp</button>
+            </div>
+            <div>
+              <img src="./assets/img/listening.png" >
+            </div>
+          </div>
         </div>
 
         <div class="ratings"></div>
