--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
           <div class="menu-selector">< ></div>
           <div class="menu-card">
             <div class="card-info">
-              <h1>Rediscover your music</h1>
-              <h4>blabla</h4>
+              <h2>Rediscover your music</h2>
+              <h4>Imagine loving music so much that you pour your heart,</br>
+                soul, and engineering know-how into creating a</br>
+                completely custom music player for music lovers just like</br>
+                you. Well, that's exactly what we did.</h4>
               <button>Discover Plexamp</button>
             </div>
             <div>
