--- a/index.html
+++ b/index.html
@@ -56,7 +56,42 @@
           </div>
         </div>
 
-        <div class="ratings"></div>
+        <div class="ratings">
+          <div class="rating1">
+            <div class="store">
+              <img width="30" height="30" src="./assets/img/android-icon.png" href="Android icon">
+              <p>Play Store</p>
+            </div>
+            <img width="150" src="./assets/img/rating5.png" href="rating stars">
+            <p class="average">5/5</p>
+            <p>329,603 ratings</p>
+          </div>
+          <div class="rating2">
+            <div class="store">
+              <img width="30" height="30" src="./assets/img/apple-icon.png" href="Apple icon">
+              <p>App Store</p>
+            </div>
+            <img width="150" src="./assets/img/rating4.png" href="rating stars">
+            <p class="average">4/5</p>
+            <p>103,198 ratings</p>
+          </div>
+          <div class="rating3">
+            <div class="store">
+              <img width="75" height="30" src="./assets/img/roku-icon.png" href="Roku icon">
+              <p>App Store</p>
+            </div>
+            <img width="150" src="./assets/img/rating4.png" href="rating stars">
+            <p class="average">4/5</p>
+            <p>143,027 ratings</p>
+          </div>
+          <div class="download">
+            <h2>Download now</h2>
+            <div class="badges">
+              <img width="150" src="./assets/img/google-play-badge.png">
+              <img width="150" src="./assets/img/app-store-badge.png">
+            </div>
+          </div>
+        </div>
       </section>
       
       <section class="media"></section>
