--- a/index.html
+++ b/index.html
@@ -94,7 +94,17 @@
         </div>
       </section>
       
-      <section class="media"></section>
+      <section class="media">
+        <div class="media-info">
+          <h2>You bring your media,</br> we'll do the rest.</h2>
+          <p>We love personal media too! Use Plex to organize, beautify, and stream your</br>
+             personal collection of movies, TV shows, music, and photos anywhere, on all your</br>
+             devices.</p>
+          <button>Más información</button>
+        </div>
+        <div class="devices"></div>
+      </section>
+
       <section class="blog"></section>
       <footer class="footer"></footer>
     </div>
