Navbar styles, nested CSS, grid minors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <section class="main">
         <div class="streaming">
-          <h1>Meet your TV concierge</h1>
+          <h1>Meet your TV concierge.</h1>
           <h4>Need something to watch? We’re on it. Plex combines free movies & TV with </br>
              your favorite streaming services, so there’s always more to discover.</h4>
           <button>Comenzar el streaming</button>
