--- a/index.html
+++ b/index.html
@@ -105,7 +105,18 @@
         <div class="devices"></div>
       </section>
 
-      <section class="blog"></section>
+      <section class="blog">
+        <h1>Blog de Plex</h1>
+        
+          <div class="blog-card1">
+            <h6>November 1, 2023</h6>
+            <h2>Discover Together: When the</br>
+               Sequel Lives Up to the Original</h2>
+          </div>
+          <div class="blog-card2"></div>
+          <div class="blog-card3"></div>
+        
+      </section>
       <footer class="footer"></footer>
     </div>
   </body>
