Blog section finished

--- a/index.html
+++ b/index.html
@@ -113,8 +113,17 @@
             <h2>Discover Together: When the</br>
                Sequel Lives Up to the Original</h2>
           </div>
-          <div class="blog-card2"></div>
-          <div class="blog-card3"></div>
+          <div class="blog-card2">
+            <h6>September 21, 2023</h6>
+            <h2>Plex Pro Week '23: TLDR; Our</br>
+               First Ever Fireside in the</br>
+              Forums</h2>
+          </div>
+          <div class="blog-card3">
+            <h6>September 17, 2023</h6>
+            <h2>Plex Pro Week '23: Going from</br>
+               Basic to Beast Mode</h2>
+          </div>
         
       </section>
       <footer class="footer"></footer>
