Footer section (not finished)

--- a/index.html
+++ b/index.html
@@ -126,7 +126,56 @@
           </div>
         
       </section>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <img class="plex-logo" src="./assets/img/plex-logo.svg" href="plex logo">
+        <div class="map-links">
+          <div>
+            <h2>Empresa</h2>
+            <a>Sobre Plex</a>
+            <a>Trabaja con nosotros</a>
+            <a>Nuestra filosofía</a>
+            <a>Donaciones</a>
+            <a>Socios</a>
+            <a>Sala de prensa</a>
+            <a>Accesorios de Plex</a>
+            <a>Blog de Plex</a>
+          </div>
+          <div>
+            <h2>Plex Pass</h2>
+            <a>Hazte prémium</a>
+            <a>Plexamp</a>
+            <a>Plex Labs</a>
+            <a>Aprovéchate de las ventajas</a>
+          </div>
+          <div>
+            <h2>Descargas</h2>
+            <a>Plex Media Server</a>
+            <a>Apps y dispositivos</a>
+            <a>¿Dónde se puede ver el contenido?</a>
+          </div>
+          <div>
+            <h2>Asistencia</h2>
+            <a>Finding Help</a>
+            <a>Support Library</a>
+            <a>Community Forums</a>
+            <a>Dudas de facturación</a>
+            <a>Estado</a>
+            <a>Recompensa por cazar errores</a>
+            <a>Extelespectadores</a>
+            <a>Get in Touch</a>
+          </div>
+          <div>
+            <h2>Ver gratis</h2>
+            <a>Buscador de canales de TV</a>
+            <a>Qué ver</a>
+            <a>What To Watch on Hulu</a>
+            <a>Selección de A24</a>
+          </div>
+        </div>
+        <hr/>
+        <div></div>
+        <div></div>
+      </footer>
     </div>
   </body>
   </html>
