Footer: lopd div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <header class="navbar">
         <img src="./assets/img/plex-logo.svg" href="plex logo">
-        <input type="text" placeholder="Find Movies & TV"/>
+        <input type="text" placeholder=" &nbsp &nbsp Find Movies & TV"/>
         <div></div>
         <div class="nav-menu">
           <a>Películas y TV gratis</a>
@@ -173,7 +173,12 @@
           </div>
         </div>
         <hr/>
-        <div></div>
+        <div class="lopd">
+          <p>Copyright © 2023 Plex</p>
+          <a>Privacidad y legalidad</a>
+          <a>Accesibilidad</a>
+          <p>Idioma:<a>Español</a></p>
+        </div>
         <div></div>
       </footer>
     </div>
