--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Training</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="http://localhost:35729/livereload.js"></script>
   </head>
   <body>
@@ -179,7 +180,13 @@
           <a>Accesibilidad</a>
           <p>Idioma:<a>Español</a></p>
         </div>
-        <div></div>
+        <div class="networks">
+          <i class="twitter fa-brands fa-twitter"></i>
+          <i class="fb fa-brands fa-facebook-f"></i>
+          <i class="instagram fa-brands fa-instagram"></i>
+          <i class=" linkedin fa-brands fa-linkedin-in"></i>
+          <i class="youtube fa-brands fa-youtube"></i>
+        </div>
       </footer>
     </div>
   </body>
